samples/_failures_safe/1761711885_20bfef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f21ed3f.c: In function ‘main’:
./samples/SAFE/__tmp_6f21ed3f.c:158:13: error: expected declaration or statement at end of input
  158 |             return 1;
      |             ^~~~~~
./samples/SAFE/__tmp_6f21ed3f.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6f21ed3f.c:158:13: error: expected declaration or statement at end of input
